# mcp-fiscal-brasil

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  docs.yml  publish-mcp-registry.yml  publish.yml  welcome.yml
docs/getting-started/: deploy.md  install.md
docs/interfaces/: rest-api.md
docs/marketing/: blog-launch-v0.2.md
npm-wrapper/: README.md  package.json  tsconfig.json
npm-wrapper/src/: cli.ts  index.ts
src/mcp_fiscal_brasil/: __init__.py  api.py  cli.py  sdk.py  server.py
src/mcp_fiscal_brasil/_core/: config.py
src/mcp_fiscal_brasil/agentic/: __init__.py  sped.py  supplier.py
src/mcp_fiscal_brasil/bcb/: _tools.py  client.py  tools.py
src/mcp_fiscal_brasil/cep/: _tools.py  tools.py
src/mcp_fiscal_brasil/cnae/: _tools.py  tools.py
src/mcp_fiscal_brasil/empresa/: _tools.py  tools.py
src/mcp_fiscal_brasil/ibge/: _tools.py  tools.py
src/mcp_fiscal_brasil/mei/: _tools.py  tools.py
src/mcp_fiscal_brasil/nfe/: xml_parser.py
src/mcp_fiscal_brasil/nfse/: client.py  tools.py
src/mcp_fiscal_brasil/shared/: validators.py
src/mcp_fiscal_brasil/sped/: tools.py
src/mcp_fiscal_brasil/tabelas/: _tools.py  loader.py  tools.py
tests/: test_agentic.py  test_api.py  test_bcb.py  test_cli.py  test_core_config.py  test_http_client.py  test_lote_c_tools.py  test_nfe_reforma_tributaria.py  test_nfse.py  test_nfse_circuit_breaker.py  test_nfse_nacional.py  test_nfse_schemas.py  test_rate_limiter.py  test_reforma_normalizacao.py  test_reforma_simulacao.py  test_sped_valores_numericos.py  test_tabelas.py  test_validators.py
